# mtgish

./: .gitignore  CNAME  LICENSE  README.md  build  check_unused_ts_types  custom_split  debug_remaining  debug_subset  download_mtgjson  download_scryfall  justfile  list_failing_subset  preprocess_mtgjson  preprocess_scryfall
data/: dungeons.json  tokens.json  version.json
go_mtg_parser/: clean_rules_text.go  go.mod  jsonc.go  main.go  prefix_tree.go  prefix_tree_test.go  serialize.go
grammars/: english_grammar-INPUT.json5  english_grammar-ability_word.json5  english_grammar-counters.json5  english_grammar-flavor_word.json5  english_grammar-named_cards.json5  english_grammar-null_text.json5  english_grammar-reminder_text.json5  english_grammar-type_line.json5  find_replace.json5  generate_plurals  ignore.json5  mtgish_grammar-create_tokens.json5  mtgish_grammar-mana.json5  mtgish_grammar-named_cards.json5  mtgish_grammar-triggers.json5  mtgish_grammar-type_line.json5  mtgish_grammar-vote_option.json5  mtgish_grammar.json5  short_names.json5  specialize.py
rust_syntax/: Cargo.toml
rust_syntax/src/: main.rs  mtg_types.rs
typescript_types/: fix_generated_typescript.vim  header.txt  oracle_cards.d.ts  subtypes.ts
web_src/: card-display.css  card-display.html  card_parser.js  horizontal_progress.css  index.css  index.html  vertical_progress.css
